--- a/src/assets/css/components/index-post.css
+++ b/src/assets/css/components/index-post.css
@@ -7,6 +7,7 @@
   /* text-align: center; */
   align-self: baseline;
   height: 100%;
+  max-width: 100%;
 
   & img {
     /* max-width: 22rem; */
@@ -25,4 +26,8 @@
   &[data-hidden] {
     display: none;
   }
+}
+
+#posts > .wrapper > .flex-row > * {
+  /* flex: 1 0 auto; */
 }
